# axum-web

./: .env  .env.example  .gitignore  Cargo.toml  README.md  Readme.md  diesel.toml
migrations/2024-06-05-133936_create_users/: up.sql
migrations/2024-06-20-131504_add_user_id_to_posts/: up.sql
migrations/2024-11-13-082245_add_groups_user/: down.sql  up.sql
migrations/2024-11-28-102402_upload/: down.sql  up.sql
migrations/2024-12-04-141530_add_path_media/: down.sql  up.sql
src/: database.rs  errors.rs  format_responses.rs  handlers.rs  main.rs  middlewares.rs  routes.rs  schema.rs
src/handlers/: admin.rs  api.rs  authenticate.rs  hello.rs  medias.rs  mod.rs  posts.rs  users.rs
src/middlewares/: expiration_token.rs  is_admin.rs  is_authenticate.rs  is_proprietary_post.rs  mod.rs  redirect.rs
src/models/: medias.rs  mod.rs  posts.rs  users.rs
src/repository/: medias.rs  mod.rs  post.rs  users.rs
src/routes/: admin.rs  api.rs  auth.rs  medias.rs  mod.rs  posts.rs  users.rs
