[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["macros", "multipart"]}
bcrypt = "0.15.1"
chrono = "0.4.38"
diesel = {version = "2.2.0", features = ["mysql"]}
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = "9.3.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.12"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
